# AIWaifuVTScontroller

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
waifu_vts_controller/: controller.py
waifu_vts_controller/audio/: controller.py  utils.py
