[tool.poetry]
name = "aiwaifuvtscontroller"
version = "0.1.0"
description = ""
authors = ["hrnph <hrnph@protomail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "waifu_vts_controller"}]

[tool.poetry.dependencies]
python = "^3.10"
websocket-client = "^1.8.0"
requests = "^2.32.3"
pyvts = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
